<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- Dear students, please *do not* change the following metadata. Thanks! -->

	<artifactId>swt24w07</artifactId>
	<version>1.0.0.BUILD-SNAPSHOT</version>

	<name>swt24w07</name>
	<description>ST lab project of group swt24w07</description>
	<url>https://github.com/st-tu-dresden-praktikum/swt24w07</url>

	<parent>
		<groupId>de.tudresden.inf.st.lab</groupId>
		<artifactId>st-lab-parent</artifactId>
		<version>5.0.0</version>
		<relativePath/>
	</parent>

	<properties>
		<java.version>21</java.version>
		<sonar.host.url>${env.STLAB_SONAR_HOST_URL}</sonar.host.url>
		<sonar.token>${env.STLAB_SONAR_LOGIN}</sonar.token>
		<argLine>-Xmx1G</argLine>
	</properties>

	<dependencies>

		<!--
			Additional project dependencies go here.

			BUT PLEASE NOTE!

			The parent pom that is referenced above already includes most libraries
			necessary for the lab: Spring, Salespoint, Hibernate, JUnit, etc.

			You can list the current dependencies and their versions using the
			`mvn dependency:list` command.

			Use Maven Central for package search (https://search.maven.org/).
		-->

	</dependencies>

	<repositories>

		<repository>
			<id>salespointframework</id>
			<url>https://www.st.inf.tu-dresden.de/SalesPoint/repository</url>
		</repository>

	</repositories>

	<scm>
		<url>https://github.com/st-tu-dresden-praktikum/swt24w07</url>
	</scm>

</project>
